Fix audio CD detection on Amarok start

Get a list of optical discs, rather than looking for optical discs in
StorageAccess devices.
This does not fix other audio CD issues such as "play audio CD with Amarok" not
working.

Patch by Luc Menut.

BUG:276032
CCBUG:266412
REVIEW:102580